Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126152

qdoc: Macro arguments cannot contain formatting commands

    XMLWordPrintable

Details

    • 284985d45 (dev), 439c5f341 (6.8)
    • DaVinci 98

    Description

      Given a macro

       macro.hello = "Hello, \1!"
      

      The following usage

      \hello {World}
      

      generates

      Hello, World!

      However,

      \hello {\e {World}}
      

      does not generate

      Hello, World!

      instead resulting in a warning,

      (qdoc) warning: Unknown macro 'e'
      

      and output
      Hello, e World!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes