qdoc: Allow formatting commands in macro arguments

QDoc supports expanding nested macros, i.e. macros passed as arguments
to other macros. However, this process expected all sequences starting
with a backslash to be macros in such arguments.

In other words, it was impossible to pass formatting (emphasis, bold,
teletype, etc) information to macros that take arguments, using the
\e, \b, or \c (\tt) commands - only plain text was allowed.

Allow passing formatting information by preserving a subset of
formatting commands through the macro expansion:
    \a, \b, \c, \e, \tt, \tm, \sub, \sup, \uicontrol, \underline

Allowing all possible commands would result in interesting scenarios
that we likely want to avoid. However, formatting commands are
relatively safe as commands that need to ignore formatting already do
so.

Fixes: QTBUG-126152
Change-Id: Ibed3258a769b832563e7ccf6775a407910fa704b
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit 284985d45788e68f8d56c03725598da9b7194a7c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>